Calling Swww too close together casues the /asset/000000 img to be request from cahce?Patched fix

--- a/src/custom.css
+++ b/src/custom.css
@@ -50,7 +50,7 @@
 }
 
 .page-item a.page-link:hover {
-    background-color: #000000;
+    background-color: 000000;
     color: #ebdbb2;
     border-color: transparent !important;
 }
